Attempt to fix not showing banner

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
   text-align: center;
 }
 .menu {
-  background-image: url("./resources/images/the-flatiron-building.png");
+  background-image: url("../resources/images/the-flatiron-building.png");
 }
 .process h2 {
   font-size: 32 px;
@@ -37,7 +37,7 @@ body{
   font-size: 14px;
 }
 .smallbanner {
-  background-image: url("./resources/images/the-flatiron-building.png");
+  background-image: url("../resources/images/the-flatiron-building.png");
 }
 .smallbanner h4 {
   font-size: 23px;
